force-app/main/default/objects/Lead/fields/Other_Source__c.field-meta.xml
<CustomField>
    <fullName>Other_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Source</label>
    <length>30</length>
    <type>Text</type>
</CustomField>