force-app/main/default/objects/Lead/fields/Page_Tittle__c.field-meta.xml
<CustomField>
    <fullName>Page_Tittle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>