force-app/main/default/objects/Lead/fields/Pause_Communication__c.field-meta.xml
<CustomField>
    <fullName>Pause_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pause Communication</label>
    <type>Checkbox</type>
</CustomField>