force-app/main/default/objects/Lead/fields/Physician_Email__c.field-meta.xml
<CustomField>
    <fullName>Physician_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Email</label>
    <type>Email</type>
</CustomField>