force-app/main/default/objects/Lead/fields/Physician_Initials__c.field-meta.xml
<CustomField>
    <fullName>Physician_Initials__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Initials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>