force-app/main/default/objects/Lead/fields/Physician_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Physician_Sign_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Sign Date</label>
    <length>60</length>
    <type>Text</type>
</CustomField>