force-app/main/default/objects/Lead/fields/PhysicianLocatorUpdated__c.field-meta.xml
<CustomField>
    <fullName>PhysicianLocatorUpdated__c</fullName>
    <formula>IF(Physicians_Locator_Contact__c==True,&apos;True&apos;,IF(Physicians_Locator_Contact__c==False,&apos;False&apos;,&apos;&apos;))</formula>
    <label>PhysicianLocatorUpdated</label>
    <type>Text</type>
</CustomField>