force-app/main/default/objects/Lead/fields/Physicians_Locator__c.field-meta.xml
<CustomField>
    <fullName>Physicians_Locator__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Physicians Locator</label>
    <type>Checkbox</type>
</CustomField>