force-app/main/default/objects/Lead/fields/Please_select_your_distributorship__c.field-meta.xml
<CustomField>
    <fullName>Please_select_your_distributorship__c</fullName>
    <label>Please select your distributorship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Boneafide Orthopaedics, Inc.</fullName>
            </value>
            <value>
                <fullName>EverGen Surgical, Inc.</fullName>
            </value>
            <value>
                <fullName>Midark Surgical Inc.</fullName>
            </value>
            <value>
                <fullName>Select Orthopedics, Inc.</fullName>
            </value>
            <value>
                <fullName>ZB APEX Surgical</fullName>
            </value>
            <value>
                <fullName>ZB Davis</fullName>
            </value>
            <value>
                <fullName>ZB Iowa</fullName>
            </value>
            <value>
                <fullName>ZB MidAmerica</fullName>
            </value>
            <value>
                <fullName>ZB Mid-Atlantic</fullName>
            </value>
            <value>
                <fullName>ZB Mid-Ohio</fullName>
            </value>
            <value>
                <fullName>ZB South Carolina</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>