force-app/main/default/objects/Lead/fields/Practice_3_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Practice_3_Geolocation__c</fullName>
    <label>Practice 3 Geolocation</label>
    <scale>12</scale>
    <type>Location</type>
</CustomField>