force-app/main/default/objects/Lead/fields/Practice_Address_2_2__c.field-meta.xml
<CustomField>
    <fullName>Practice_Address_2_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Practice Address 2_2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>