force-app/main/default/objects/Lead/fields/Practice_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Practice_Address_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Practice Address 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>