force-app/main/default/objects/Lead/fields/Practice_Address__c.field-meta.xml
<CustomField>
    <fullName>Practice_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Practice Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>