force-app/main/default/objects/Lead/fields/Practice_City_1__c.field-meta.xml
<CustomField>
    <fullName>Practice_City_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Practice City 1</label>
    <type>TextArea</type>
</CustomField>