force-app/main/default/objects/Lead/fields/Practice_Country_2__c.field-meta.xml
<CustomField>
    <fullName>Practice_Country_2__c</fullName>
    <label>Practice Country 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>United States</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>