force-app/main/default/objects/Lead/fields/Practice_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Practice_Name_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Practice Name 2</label>
    <type>TextArea</type>
</CustomField>