force-app/main/default/objects/Lead/fields/Practice_Name__c.field-meta.xml
<CustomField>
    <fullName>Practice_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Practice Name</label>
    <type>TextArea</type>
</CustomField>