force-app/main/default/objects/Lead/fields/Practice_Phone_3__c.field-meta.xml
<CustomField>
    <fullName>Practice_Phone_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Practice Phone 3</label>
    <type>Phone</type>
</CustomField>