force-app/main/default/objects/Lead/fields/Practice_State_3__c.field-meta.xml
<CustomField>
    <fullName>Practice_State_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Practice State 3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>