force-app/main/default/objects/Lead/fields/Practice_Website_2__c.field-meta.xml
<CustomField>
    <fullName>Practice_Website_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Practice Website 2</label>
    <type>Url</type>
</CustomField>