force-app/main/default/objects/Lead/fields/Practice_Zip_Code_2__c.field-meta.xml
<CustomField>
    <fullName>Practice_Zip_Code_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Practice Zip Code 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>