force-app/main/default/objects/Lead/fields/Preferred_Address__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Address__c</fullName>
    <description>Lists the preferred contact method: Home or Office</description>
    <label>Preferred Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Office</fullName>
                <default>true</default>
                <label>Office</label>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>