force-app/main/default/objects/Lead/fields/Preferred_HTML_Email_Format__c.field-meta.xml
<CustomField>
    <fullName>Preferred_HTML_Email_Format__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Preferred HTML Email Format</label>
    <type>Checkbox</type>
</CustomField>