force-app/main/default/objects/Lead/fields/Primary_City__c.field-meta.xml
<CustomField>
    <fullName>Primary_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>