force-app/main/default/objects/Lead/fields/Primary_Country__c.field-meta.xml
<CustomField>
    <fullName>Primary_Country__c</fullName>
    <description>This field will be used to hold the website country passed from the Zimmer.com/ ZimmerBiomet.com and other sites.</description>
    <inlineHelpText>This field will be used to hold the website country passed from the Zimmer.com/ ZimmerBiomet.com and other sites.</inlineHelpText>
    <label>Primary Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>JP</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>BR</fullName>
            </value>
            <value>
                <fullName>LA</fullName>
            </value>
            <value>
                <fullName>CZ</fullName>
            </value>
            <value>
                <fullName>FI</fullName>
            </value>
            <value>
                <fullName>NL</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>RU</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>ZA</fullName>
            </value>
            <value>
                <fullName>TR</fullName>
            </value>
            <value>
                <fullName>CN</fullName>
            </value>
            <value>
                <fullName>TW</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>NZ</fullName>
            </value>
            <value>
                <fullName>CL</fullName>
            </value>
            <value>
                <fullName>DK</fullName>
            </value>
            <value>
                <fullName>GR</fullName>
            </value>
            <value>
                <fullName>IS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>