force-app/main/default/objects/Lead/fields/Primary_Street__c.field-meta.xml
<CustomField>
    <fullName>Primary_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Street</label>
    <type>TextArea</type>
</CustomField>