force-app/main/default/objects/Lead/fields/Procedure_Product_Specialties__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Product_Specialties__c</fullName>
    <label>Procedure/Product Specialties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adkins Strut</fullName>
            </value>
            <value>
                <fullName>Anterior Spine</fullName>
            </value>
            <value>
                <fullName>Anterior Supine</fullName>
            </value>
            <value>
                <fullName>Computer Assisted Solutions/Navigation</fullName>
            </value>
            <value>
                <fullName>Continuum</fullName>
            </value>
            <value>
                <fullName>Continuum Metal on Metal</fullName>
            </value>
            <value>
                <fullName>Denovo NT</fullName>
            </value>
            <value>
                <fullName>Early Intervention</fullName>
            </value>
            <value>
                <fullName>Fitmore</fullName>
            </value>
            <value>
                <fullName>Gel-One</fullName>
            </value>
            <value>
                <fullName>Gender Knee</fullName>
            </value>
            <value>
                <fullName>Kinectiv</fullName>
            </value>
            <value>
                <fullName>LPS Flex Mobile</fullName>
            </value>
            <value>
                <fullName>Minimally Invasive Solutions (MIS)</fullName>
            </value>
            <value>
                <fullName>Orthobiologics</fullName>
            </value>
            <value>
                <fullName>Partial Knee, Patello-Femoral Joint</fullName>
            </value>
            <value>
                <fullName>Partial Knee, Unicompartmental Knee</fullName>
            </value>
            <value>
                <fullName>Patient Specific Instruments</fullName>
            </value>
            <value>
                <fullName>Pectus Bar</fullName>
            </value>
            <value>
                <fullName>Persona</fullName>
            </value>
            <value>
                <fullName>Persona Knee System</fullName>
            </value>
            <value>
                <fullName>Revision Hip</fullName>
            </value>
            <value>
                <fullName>Revision Knee</fullName>
            </value>
            <value>
                <fullName>Ribfix Blu</fullName>
                <label>RibFix Blu</label>
            </value>
            <value>
                <fullName>SternaLock 360</fullName>
            </value>
            <value>
                <fullName>SternaLock Blu</fullName>
            </value>
            <value>
                <fullName>Trabecular Metal</fullName>
            </value>
            <value>
                <fullName>Trabecular Metal Total Ankle</fullName>
            </value>
            <value>
                <fullName>Vivacit-E</fullName>
            </value>
            <value>
                <fullName>Vivacit-E-Hip Construct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>