force-app/main/default/objects/Lead/fields/Product_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_of_Interest__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product of Interest</label>
    <type>TextArea</type>
</CustomField>