force-app/main/default/objects/Lead/fields/Professional_Type__c.field-meta.xml
<CustomField>
    <fullName>Professional_Type__c</fullName>
    <label>Professional Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>ASC Executive/Administrator</fullName>
            </value>
            <value>
                <fullName>Hospital Executive/Administrator</fullName>
            </value>
            <value>
                <fullName>Non-prescribing assistant</fullName>
            </value>
            <value>
                <fullName>non-prescribing Technician</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Nurse-APRN</fullName>
            </value>
            <value>
                <fullName>Nurse-RNLPN</fullName>
            </value>
            <value>
                <fullName>OR Manager/Director</fullName>
            </value>
            <value>
                <fullName>OR Nurse</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other non-prescribing HCP</fullName>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Prescriber (non-Physician)</fullName>
            </value>
            <value>
                <fullName>Student/Trainee</fullName>
            </value>
            <value>
                <fullName>Surgeon in ASC Setting</fullName>
            </value>
            <value>
                <fullName>Surgeon in Hospital Setting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>