force-app/main/default/objects/Lead/fields/PSD__c.field-meta.xml
<CustomField>
    <fullName>PSD__c</fullName>
    <description>PSD for your area</description>
    <label>PSD(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buzz VanArsdale</fullName>
            </value>
            <value>
                <fullName>David Lorenzi</fullName>
            </value>
            <value>
                <fullName>Don Madson</fullName>
            </value>
            <value>
                <fullName>John Barrette</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Steve Daniel</fullName>
            </value>
            <value>
                <fullName>Steven Morris</fullName>
            </value>
            <value>
                <fullName>Terry O&apos;Donnell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>