force-app/main/default/objects/Lead/fields/Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Qualifier__c</fullName>
    <description>This field is leveraged to provide additional lead information acquired at the time of the initial contact.</description>
    <label>Qualifier</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Brochure</fullName>
            </value>
            <value>
                <fullName>Email Info</fullName>
            </value>
            <value>
                <fullName>Follow up</fullName>
            </value>
            <value>
                <fullName>Have Rep Call</fullName>
            </value>
            <value>
                <fullName>Hot Lead</fullName>
            </value>
            <value>
                <fullName>Mail Info</fullName>
            </value>
            <value>
                <fullName>Medical Education</fullName>
            </value>
            <value>
                <fullName>Model</fullName>
            </value>
            <value>
                <fullName>Surgical Technique</fullName>
            </value>
            <value>
                <fullName>White Paper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>