force-app/main/default/objects/Lead/fields/Question_No_11__c.field-meta.xml
<CustomField>
    <fullName>Question_No_11__c</fullName>
    <inlineHelpText>I am a caregiver to someone and am concerned about who will take care of them during rehab from the knee and/or hip replacement surgery.</inlineHelpText>
    <label>Question No. 11</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>