force-app/main/default/objects/Lead/fields/Question_No_15__c.field-meta.xml
<CustomField>
    <fullName>Question_No_15__c</fullName>
    <inlineHelpText>How frequently does the pain you have in your knee and/or hip wake you from sleep at night?</inlineHelpText>
    <label>Question No. 15</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than once a week</fullName>
            </value>
            <value>
                <fullName>Once a week</fullName>
            </value>
            <value>
                <fullName>1-3 nights per week</fullName>
            </value>
            <value>
                <fullName>4-6 nights per week</fullName>
            </value>
            <value>
                <fullName>Every night</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>