force-app/main/default/objects/Lead/fields/Question_No_5__c.field-meta.xml
<CustomField>
    <fullName>Question_No_5__c</fullName>
    <inlineHelpText>My pain is not severe enough to have the replacement surgery yet.</inlineHelpText>
    <label>Question No. 5</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>