force-app/main/default/objects/Lead/fields/Re_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_Opt_In_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>captures the Re-Opt In Date if Status is set to Re-Opt In</inlineHelpText>
    <label>Re-Opt In Date</label>
    <type>Date</type>
</CustomField>