force-app/main/default/objects/Lead/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Other</label>
    <length>30</length>
    <type>Text</type>
</CustomField>