force-app/main/default/objects/Lead/fields/referral_Others__c.field-meta.xml
<CustomField>
    <fullName>referral_Others__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>referral Others</label>
    <length>30</length>
    <type>Text</type>
</CustomField>