force-app/main/default/objects/Lead/fields/Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type__c</fullName>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Active Member</fullName>
            </value>
            <value>
                <fullName>Associate Member</fullName>
            </value>
            <value>
                <fullName>Dental Hygienist/Full Conference</fullName>
            </value>
            <value>
                <fullName>Dental Student Interest Group (DSIG)</fullName>
            </value>
            <value>
                <fullName>International Member</fullName>
            </value>
            <value>
                <fullName>Life Active Member</fullName>
            </value>
            <value>
                <fullName>Non-member Dentist/Periodontist</fullName>
            </value>
            <value>
                <fullName>Non-member Student</fullName>
            </value>
            <value>
                <fullName>Office Staff</fullName>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
            <value>
                <fullName>Student Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>